--- a/package.json
+++ b/package.json
@@ -27,9 +27,21 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.10.7",
     "autoprefixer": "^10.4.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
+    "lucide-react": "^0.292.0",
     "postcss": "^8.4.14",
     "react-router-dom": "6.2",
-    "tailwindcss": "^3.0.24"
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.0.24",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
