--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
          "target": "es6",
          "moduleResolution": "node",
          "esModuleInterop": true,
+         "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    }
      },
      "include": ["src/**/*.ts", "src/**/*.tsx"],
      "exclude": ["node_modules"],
