--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.292.0",
     "postcss": "^8.4.14",
     "react-router-dom": "6.2",
